--- a/ImageFilter/Base.lproj/Main.storyboard
+++ b/ImageFilter/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="m7w-fV-ubL">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,108 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ImageFilter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Abu_dhabi_skylines_2014.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="KoT-1X-DRb">
+                                <rect key="frame" x="0.0" y="64" width="375" height="237"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fwv-pU-Pft">
+                                <rect key="frame" x="168" y="318" width="39" height="30"/>
+                                <state key="normal" title="Sepia"/>
+                                <connections>
+                                    <action selector="applySepia:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zlu-r4-pp8"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F1M-aC-HHW">
+                                <rect key="frame" x="172" y="356" width="30" height="30"/>
+                                <state key="normal" title="Blur"/>
+                                <connections>
+                                    <action selector="applyBlur:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4kT-Wc-1Hw"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pps-U4-zGo">
+                                <rect key="frame" x="172" y="394" width="30" height="30"/>
+                                <state key="normal" title="Noir"/>
+                                <connections>
+                                    <action selector="applyNoirEffect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Ad-CH-dCu"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bOq-8Y-n1d">
+                                <rect key="frame" x="137" y="424" width="100" height="30"/>
+                                <state key="normal" title="Process Effect"/>
+                                <connections>
+                                    <action selector="applyPhotoTransferEffect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7sG-om-v6j"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YRE-jm-LI3">
+                                <rect key="frame" x="145" y="454" width="85" height="30"/>
+                                <state key="normal" title="Reset Filters"/>
+                                <connections>
+                                    <action selector="clearFilters:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GfR-0C-C9M"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bOq-8Y-n1d" secondAttribute="trailing" constant="138" id="1GN-q3-otD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pps-U4-zGo" secondAttribute="trailing" constant="173" id="3ej-Kx-geT"/>
+                            <constraint firstItem="YRE-jm-LI3" firstAttribute="top" secondItem="bOq-8Y-n1d" secondAttribute="bottom" id="55h-CZ-XH3"/>
+                            <constraint firstItem="bOq-8Y-n1d" firstAttribute="top" secondItem="pps-U4-zGo" secondAttribute="bottom" id="77Z-59-DDu"/>
+                            <constraint firstItem="bOq-8Y-n1d" firstAttribute="top" secondItem="pps-U4-zGo" secondAttribute="bottom" id="AgN-qX-lgr"/>
+                            <constraint firstItem="YRE-jm-LI3" firstAttribute="top" secondItem="bOq-8Y-n1d" secondAttribute="bottom" id="Ao7-cB-3eQ"/>
+                            <constraint firstItem="fwv-pU-Pft" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="168" id="BPW-cH-yFd"/>
+                            <constraint firstItem="pps-U4-zGo" firstAttribute="top" secondItem="F1M-aC-HHW" secondAttribute="bottom" constant="8" id="KC7-qK-9tt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KoT-1X-DRb" secondAttribute="bottom" constant="366" id="OqC-EP-I6v"/>
+                            <constraint firstItem="pps-U4-zGo" firstAttribute="top" secondItem="F1M-aC-HHW" secondAttribute="bottom" constant="8" id="ScA-0u-chW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YRE-jm-LI3" secondAttribute="bottom" constant="183" id="VDQ-M1-uz3"/>
+                            <constraint firstItem="F1M-aC-HHW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="172" id="XaF-TW-WNM"/>
+                            <constraint firstItem="pps-U4-zGo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="172" id="Znj-14-BDL"/>
+                            <constraint firstItem="fwv-pU-Pft" firstAttribute="top" secondItem="KoT-1X-DRb" secondAttribute="bottom" constant="17" id="e1j-1n-vUe"/>
+                            <constraint firstItem="YRE-jm-LI3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="145" id="em7-Wm-aFm"/>
+                            <constraint firstItem="F1M-aC-HHW" firstAttribute="top" secondItem="fwv-pU-Pft" secondAttribute="bottom" constant="8" id="hgM-dw-uD2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fwv-pU-Pft" secondAttribute="trailing" constant="168" id="i1I-V5-BuI"/>
+                            <constraint firstItem="bOq-8Y-n1d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="137" id="jCa-tR-Bic"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YRE-jm-LI3" secondAttribute="trailing" constant="145" id="lIg-8Z-vtA"/>
+                            <constraint firstItem="KoT-1X-DRb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="myE-gz-J5w"/>
+                            <constraint firstItem="KoT-1X-DRb" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="s8b-6q-IUx"/>
+                            <constraint firstItem="KoT-1X-DRb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tQ8-Je-4PS"/>
+                            <constraint firstItem="F1M-aC-HHW" firstAttribute="top" secondItem="fwv-pU-Pft" secondAttribute="bottom" constant="8" id="w5m-dz-9tV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="F1M-aC-HHW" secondAttribute="trailing" constant="173" id="zzp-gM-FPs"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="SAE-qQ-1bS"/>
+                    <connections>
+                        <outlet property="imageView" destination="KoT-1X-DRb" id="Fwt-1x-IW6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1079.2" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IIy-z7-skg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m7w-fV-ubL" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lk1-KM-yyB">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="WLY-Ic-akf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d94-bN-Nqf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="140" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Abu_dhabi_skylines_2014.jpg" width="1200" height="659"/>
+    </resources>
 </document>
