--- a/ImageFilter/Base.lproj/Main.storyboard
+++ b/ImageFilter/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Abu_dhabi_skylines_2014.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="KoT-1X-DRb">
-                                <rect key="frame" x="0.0" y="64" width="375" height="237"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="281"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fwv-pU-Pft">
                                 <rect key="frame" x="168" y="318" width="39" height="30"/>
@@ -56,6 +56,14 @@
                                     <action selector="clearFilters:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GfR-0C-C9M"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PtC-VM-ydo">
+                                <rect key="frame" x="151" y="492" width="74" height="30"/>
+                                <state key="normal" title="Part image"/>
+                                <connections>
+                                    <action selector="clearFilters:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z2q-IO-saR"/>
+                                    <action selector="partImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IDJ-bR-4vh"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -77,10 +85,14 @@
                             <constraint firstItem="F1M-aC-HHW" firstAttribute="top" secondItem="fwv-pU-Pft" secondAttribute="bottom" constant="8" id="hgM-dw-uD2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fwv-pU-Pft" secondAttribute="trailing" constant="168" id="i1I-V5-BuI"/>
                             <constraint firstItem="bOq-8Y-n1d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="137" id="jCa-tR-Bic"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PtC-VM-ydo" secondAttribute="bottom" constant="145" id="jvy-gI-dsA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YRE-jm-LI3" secondAttribute="trailing" constant="145" id="lIg-8Z-vtA"/>
                             <constraint firstItem="KoT-1X-DRb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="myE-gz-J5w"/>
+                            <constraint firstItem="PtC-VM-ydo" firstAttribute="top" secondItem="YRE-jm-LI3" secondAttribute="bottom" constant="8" id="p4A-t8-x0Y"/>
+                            <constraint firstItem="PtC-VM-ydo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="151" id="rRX-N5-edg"/>
                             <constraint firstItem="KoT-1X-DRb" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="s8b-6q-IUx"/>
                             <constraint firstItem="KoT-1X-DRb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tQ8-Je-4PS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PtC-VM-ydo" secondAttribute="trailing" constant="150" id="vBD-bc-TGY"/>
                             <constraint firstItem="F1M-aC-HHW" firstAttribute="top" secondItem="fwv-pU-Pft" secondAttribute="bottom" constant="8" id="w5m-dz-9tV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="F1M-aC-HHW" secondAttribute="trailing" constant="173" id="zzp-gM-FPs"/>
                         </constraints>
@@ -93,7 +105,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1079.2" y="133.5832083958021"/>
+            <point key="canvasLocation" x="2103" y="134"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IIy-z7-skg">
@@ -106,12 +118,108 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="WLY-Ic-akf"/>
+                        <segue destination="bbS-0U-pKM" kind="relationship" relationship="rootViewController" id="byf-As-JVi"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d94-bN-Nqf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="140" y="133.5832083958021"/>
+        </scene>
+        <!--Crop Delegate-->
+        <scene sceneID="zNH-a1-bMf">
+            <objects>
+                <viewController id="bbS-0U-pKM" customClass="ImageViewController" customModule="ImageFilter" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I4T-sU-AS8"/>
+                        <viewControllerLayoutGuide type="bottom" id="eqP-ed-z2z"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ksw-4C-gmq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1YE-db-FrH" customClass="CroppableImageView" customModule="ImageFilter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="375" height="553"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="cropDelegate" destination="bbS-0U-pKM" id="UEm-1N-NwP"/>
+                                </connections>
+                            </view>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2I9-ib-9Vz" userLabel="whiteView">
+                                <rect key="frame" x="0.0" y="64" width="375" height="553"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfC-YA-ae7" userLabel="Buttons view">
+                                <rect key="frame" x="72.5" y="627" width="230" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cgi-Rv-zIl">
+                                        <rect key="frame" x="135" y="0.0" width="90" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="36I-qv-mLF"/>
+                                            <constraint firstAttribute="width" constant="90" id="3F4-fM-iey"/>
+                                        </constraints>
+                                        <state key="normal" title="Apply Filter">
+                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="handleCropButton:" destination="bbS-0U-pKM" eventType="touchUpInside" id="8Lm-ho-Go5"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ciK-uP-y0v">
+                                        <rect key="frame" x="10" y="0.0" width="90" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="lVi-UY-fdT"/>
+                                            <constraint firstAttribute="width" constant="90" id="mAV-QS-F3X"/>
+                                        </constraints>
+                                        <state key="normal" title="Select image">
+                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="handleSelectImgButton:" destination="bbS-0U-pKM" eventType="touchUpInside" id="vTg-tx-T3T"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="230" id="SRx-yb-S6x"/>
+                                    <constraint firstAttribute="height" constant="30" id="XVl-a3-TG2"/>
+                                    <constraint firstAttribute="centerY" secondItem="cgi-Rv-zIl" secondAttribute="centerY" id="il9-WX-Etv"/>
+                                    <constraint firstAttribute="trailing" secondItem="cgi-Rv-zIl" secondAttribute="trailing" constant="5" id="jm8-Z6-ycr"/>
+                                    <constraint firstItem="ciK-uP-y0v" firstAttribute="leading" secondItem="vfC-YA-ae7" secondAttribute="leading" constant="10" id="s2Q-Rs-8zh"/>
+                                    <constraint firstAttribute="centerY" secondItem="ciK-uP-y0v" secondAttribute="centerY" id="yvY-NW-MQ3"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2I9-ib-9Vz" firstAttribute="bottom" secondItem="1YE-db-FrH" secondAttribute="bottom" id="1Qe-dJ-RQi"/>
+                            <constraint firstItem="vfC-YA-ae7" firstAttribute="top" secondItem="1YE-db-FrH" secondAttribute="bottom" constant="10" id="FBc-Kc-hoq"/>
+                            <constraint firstAttribute="trailing" secondItem="1YE-db-FrH" secondAttribute="trailing" id="FMJ-8I-MBS"/>
+                            <constraint firstAttribute="centerX" secondItem="vfC-YA-ae7" secondAttribute="centerX" id="IPU-0i-WaL"/>
+                            <constraint firstItem="1YE-db-FrH" firstAttribute="top" secondItem="I4T-sU-AS8" secondAttribute="bottom" id="IYG-l1-HId"/>
+                            <constraint firstItem="eqP-ed-z2z" firstAttribute="top" secondItem="vfC-YA-ae7" secondAttribute="bottom" constant="10" id="JPi-es-Bat"/>
+                            <constraint firstItem="2I9-ib-9Vz" firstAttribute="trailing" secondItem="1YE-db-FrH" secondAttribute="trailing" id="LxA-Jh-2s8"/>
+                            <constraint firstItem="1YE-db-FrH" firstAttribute="leading" secondItem="ksw-4C-gmq" secondAttribute="leading" id="WBT-O8-Lif"/>
+                            <constraint firstItem="2I9-ib-9Vz" firstAttribute="leading" secondItem="1YE-db-FrH" secondAttribute="leading" id="thK-jv-cR7"/>
+                            <constraint firstItem="2I9-ib-9Vz" firstAttribute="top" secondItem="1YE-db-FrH" secondAttribute="top" id="vVF-LC-2uz"/>
+                            <constraint firstAttribute="bottom" secondItem="1YE-db-FrH" secondAttribute="bottom" id="vfX-UY-6Rg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qvI-47-2Hs"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="vfX-UY-6Rg"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" id="5Zz-P0-H5k"/>
+                    <connections>
+                        <outlet property="cropButton" destination="cgi-Rv-zIl" id="gGK-uZ-BI1"/>
+                        <outlet property="cropView" destination="1YE-db-FrH" id="aIT-hd-bz2"/>
+                        <outlet property="whiteView" destination="2I9-ib-9Vz" id="UBq-8Z-XIh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OWV-aZ-3MA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1220" y="134"/>
         </scene>
     </scenes>
     <resources>
